# chaum-pedersen-auth

./: .gitignore  Cargo.toml  README.md  docker-compose.yml  taplo.toml
chaum_pedersen/: Cargo.toml
chaum_pedersen/src/: enums.rs  lib.rs  traits.rs
chaum_pedersen/src/protocol/: constants.rs  discrete_log.rs  mod.rs
chaum_pedersen/src/protocol/elliptic_curves/: errors.rs  mod.rs  pallas.rs  vesta.rs
chaum_pedersen/tests/: discrete_log_functional_tests.rs  pallas_functional_tests.rs  run.rs  vesta_functional_tests.rs
client/: Cargo.toml
client/src/: cli.rs  main.rs  service.rs  utils.rs
docker/: Dockerfile.client  Dockerfile.server
server/: Cargo.toml  build.rs
server/src/: cli.rs  errors.rs  main.rs  service.rs
server/src/apis/: mod.rs  user.rs
server/src/apis/user_impl/: in_memory.rs
