[workspace]
members = ["chaum_pedersen", "server", "client"]

[workspace.dependencies]
anyhow = "1.0.79"
async-trait = "0.1.74"
bellman = "0.14.0"
criterion = "0.3"
curve25519-dalek = { version = "4.0.0", features = [
  "digest",
  "rand_core",
  "serde",
  "group",
] }
dotenv = "0.15.0"
hex = "0.4.3"
lazy_static = "1.4.0"
log = "0.4"
num-bigint = { version = "0.4", features = ["rand"] }
num-primes = "0.3.0"
num-traits = "0.2.17"
once_cell = "1.18.0"
pairing = "0.23.0"
parking_lot = "0.12.1"
pasta_curves = "0.5.1"
prost = "0.12.1"
prost-types = "0.12.1"
rand = "0.8.5"
rand_core = "0.6.4"
serde = { version = "1.0.186", features = ["derive"] }
serde_json = "1.0.105"
sha2 = "0.10.8"
structopt = "0.3.26"
strum = { version = "0.25.0", features = ["derive"] }
thiserror = "1.0.56"
tokio = { version = "1", features = ["full"] }
tonic = "0.10.2"
tonic-build = "0.10.2"
uuid = { version = "1.5.0", features = ["v4", "fast-rng", "macro-diagnostics"] }
