[package]
edition = "2021"
name = "chaum_pedersen"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow.workspace = true
hex.workspace = true
lazy_static.workspace = true
num-bigint.workspace = true
num-traits.workspace = true
pasta_curves.workspace = true
rand.workspace = true
rand_core.workspace = true
strum.workspace = true
thiserror.workspace = true
